Añadido dockerfile de redis asi como los scripts necesarios para la tarea, cambios menores en Dcokerfiles para agregar ruta de volumen y agregada tabla log en bd mysql

--- a/DockerFile_MariaDB/Dockerfile.mariadb
+++ b/DockerFile_MariaDB/Dockerfile.mariadb
@@ -2,6 +2,7 @@ FROM mariadb:latest
 
 ENV MARIADB_ROOT_PASSWORD=1234
 ENV MARIADB_DATABASE=profesor_virtual_mariadb
+VOLUME /var/lib/mysql
 
 COPY sql.sql /docker-entrypoint-initdb.d/
 
